code_review: lab02/03/04 of sergey.korolev by lag

--- a/code-reviews/lab03/reviews/lab03_sergey.korolev.ipynb
+++ b/code-reviews/lab03/reviews/lab03_sergey.korolev.ipynb
@@ -49,6 +49,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# alexey.lubenets: 2021_04_22: тянуть весь набор данных в pandas - довольно отважный вариант) если данных будет много, то лопнем\n",
+    "# т.е. в этом случае надежнее все же использовать более стабильные + распределенные инструменты\n",
+    "\n",
     "df = pd.read_sql(\"SELECT * FROM sergey_korolev.data\", conn)\n",
     "df['domains'] = df['data.url'].apply(url2domain)"
    ]
@@ -162,6 +165,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# alexey.lubenets: 2021_04_22: а зачем тут копируем df? по сути с большим набором получим еще больший расход по памяти\n",
     "df_with_categories = df.copy()"
    ]
   },
