--- a/code-reviews/lab04/reviews/lab04_sergey.korolev.ipynb
+++ b/code-reviews/lab04/reviews/lab04_sergey.korolev.ipynb
@@ -10059,6 +10059,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# alexey.lubenets: 2021_04_22: мест для замечаний не нашел, т.к. исследовательский ноутбук другим и не будет), спасибо.\n",
+    "\n",
     "#Все равно не хватает, то для прохода суперачивки - хватило. Почему-то метрика катбуста и склерна считаются по разному.\n",
     "X_test_test = test_data[good_columns]\n",
     "preds_class = model.predict_proba(X_test_test)\n"
