--- a/projects/project02/project02.ipynb
+++ b/projects/project02/project02.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img width=\"50px\" align=\"left\" style=\"margin-right:20px\" src=\"newprolab/content_bigdata14/common/images/npl_logo.png\"> <b>New Professions Lab</b> <br /> Специалист по большим данным"
+   "<b>New Professions Lab</b> <br /> Специалист по большим данным"
    ]
   },
   {
